# hexitec

./: .gitignore
Configure2Easy/: 2easystring.cpp  2easystring.h  Configure2Easy.pro  main.cpp  mainwindow.cpp  motorchoice.cpp  motorchoice.h
ConfigureHexitecGigE/: ConfigureHexitecGigE.pro  daqchoice.cpp  daqchoice.h  hexitecgigestring.h  mainwindow.cpp  mainwindow.h  matlabchoice.cpp  matlabchoice.h
DetectorLib/: GigE.h  GigE.lib  Hexitec.h  Hexitec.lib  detectorexception.h  detectorfactory.cpp  detectorfilename.h  detectormonitor.cpp  detectormonitor.h  gigedetector.cpp  gigedetector.h  monitordata.h
HexitecGigE/: DataAcquisitionandScriptingDocumentation.docx  HexitecGigE User Manual.docx  HexitecGigE.pro  HexitecGigE.qrc  README.txt  applicationoutput.cpp  applicationoutput.h  badinifiledialog.ui  chargesharing.ui  colormap.cpp  colormap.h  dataacquisition.cpp  dataacquisition.h  dataacquisitionfactory.cpp  dataacquisitionfactory.h  dataacquisitionform.cpp  dataacquisitionform.h  dataacquisitionmodel.cpp  dataacquisitionmodel.h  datacollectiondialog.ui  datamodel.cpp  datamodel.h  detectorcontrolform.h  detectorcontrolform.ui  displaylegendsdialog.h  displaylegendsdialog.ui  dpwarningdialog.ui  galilmotor.cpp  getvaluedialog.cpp  getvaluedialog.ui  gridsizequery.h  hexitecsofttrigger.cpp  hexitecsofttrigger.h  hv.cpp  hv.h  hxtfilereader.h  hxtframe.h  hxtprocessing.cpp  hxtprocessing.h  imageprocessorhandler.cpp  (+60 more)
HexitecGigE/images/: testLoadDat.xcf
HexitecGigE/images/ideas/: Sum.xcf  lockC_version1.xcf  lockC_version2.xcf  lockY.xcf
HxtProcessingLib/: bufferitem.cpp  bufferitem.h  frameprocessor.cpp  frameprocessor.h  framere_orderprocessor.cpp  framere_orderprocessor.h  generalframeprocessor.cpp  generalframeprocessor.h  generalhxtgenerator.cpp  generalhxtgenerator.h  generalpixelprocessor.cpp  generalpixelprocessor.h  hxtchargedsharinggenerator.cpp  hxtchargedsharinggenerator.h  hxtchargedsharingsumgenerator.cpp  hxtchargedsharingsumgenerator.h  hxtgenerator.cpp  hxtgenerator.h  hxtitem.cpp  hxtitem.h  hxtsumgenerator.cpp  hxtsumgenerator.h  imageitem.cpp  imageitem.h  imageprocessor.cpp  imageprocessor.h  pixelProcessor.cpp  pixelProcessor.h  pixelprocessornextframe.cpp  pixelprocessornextframe.h  processingdefinition.cpp  processingdefinition.h
HxtProcessingLibTest/: Test.qrc  imageprocessorhandler.cpp  imageprocessorhandler.h  mainwindow.cpp  processingForm.cpp  processingForm.h  processingbuffergenerator.cpp  processingbuffergenerator.h
HxtProcessingLib_CA/include/: DateStamp.h  Histogram.h  HxtDecodedFrame.h  HxtFrame.h  HxtFrameCalibrationCorrector.h  HxtFrameChargeSharingDiscCorrector.h  HxtFrameChargeSharingSubPixelCorrector.h  HxtFrameCorrector.h  HxtFrameDoublePixelsCorrector.h  HxtFrameIncompleteDataCorrector.h  HxtFrameInducedNoiseCorrector.h  HxtFrameInterpolateCorrector.h  HxtFrameMomentumCorrector.h  HxtLogger.h  HxtOutputFormat.h  HxtPixel.h  HxtPixelArray.h  HxtPixelThreshold.h  HxtProcessingTester.h  HxtRawDataProcessor.h  HxtRawDataTypes.h  HxtSubPixelFrame.h  Log.h  LogConfig.h  Timer.h
HxtProcessingLib_CA/src/: DateStamp.cpp  Histogram.cpp  HxtDecodedFrame.cpp  HxtFrameChargeSharingDiscCorrector.cpp  HxtFrameDoublePixelsCorrector.cpp  HxtFrameMomentumCorrector.cpp  HxtPixelArray.cpp  HxtPixelThreshold.cpp  HxtProcessingTester.cpp  HxtRawDataProcessor.cpp  HxtSubPixelFrame.cpp  Log.cpp  LogConfig.cpp  Timer.cpp  appMain.cpp
Project/trunk/: DummyIndex.htm
STFC/HexitecGigEProject/trunk/Configure2Easy/: main.h
STFC/HexitecGigEProject/trunk/ConfigureHexitecGigE/: ConfigureHexitecGigE.pro  hexitecgigestring.cpp
STFC/HexitecGigEProject/trunk/DetectorLib/: DetectorLib.pro  GigE.h  GigE.lib  GigE_extended.h  detectorfactory.cpp  detectorfactory.h  detectorfilename.cpp  detectormonitor.cpp  detectormonitor.h  file_vcal_columns.ini  filewriter.cpp  gigedetector.cpp  gigedetector.h  imageacquirer.cpp  imageacquirer.h  inifile.cpp  inifile.h  monitordata.cpp  monitordata.h  windowsevent.cpp  windowsevent.h
STFC/HexitecGigEProject/trunk/HexitecGigE/: HexitecGigE.pro  HexitecGigE.qrc  axissettings.cpp  axissettings.h  chargesharing.cpp  chargesharing.h  colormapeditor.cpp  colormapeditor.ui  curve.h  dataacquisition.cpp  dataacquisition.h  dataacquisitiondefinition.cpp  dataacquisitiondefinition.h  dataacquisitionfactory.cpp  dataacquisitionfactory.h  dataacquisitionform.cpp  dataacquisitionform.h  dataacquisitionform.ui  dataacquisitionmodel.cpp  dataacquisitionmodel.h  dataacquisitionstatus.cpp  dataacquisitionstatus.h  datacollectiondialog.h  detectorcontrolform.cpp  detectorcontrolform.h  detectorcontrolform.ui  detectorfactory.cpp  detectorfactory.h  detectormonitor.cpp  detectormonitor.h  filewriter.cpp  filewriter.h  hv.cpp  hv.h  hxtprocessing.cpp  hxtprocessing.h  imageprocessorhandler.cpp  imageprocessorhandler.h  keithleymainwindow.cpp  main.cpp  (+40 more)
SerialPortLib/: serialport.cpp  serialport.h
TemperatureHumidityLib/: TemperatureHumidityLib.pro  humidity.cpp  humidity.h  sht21humidity.cpp  sht21temperature.cpp  sht21temperature.h  temperature.cpp  temperature.h  temperaturecontroller.cpp  temperaturecontroller.h  west6100plustemperaturecontroller.h
Translator/: Translator.pro  filereader.cpp  filereader.h  filewriter.cpp  h5filewriter.h  hxtfilereader.cpp  hxtfilereader.h  main.cpp
XpsLib/: newportxpsmotorcontroller.cpp  newportxpsmotorcontroller.h
svn/repos/: Chart.aspx  Chart.aspx - Copy.cs  Chart.aspx.cs  Error.aspx  Error.aspx.cs  power.css  web.config
svn/repos/App_Code/: ChartDirectorPlotter.cs  Message.cs  MySQLAccess.cs  PlotData.cs  Plotter.cs
svn/repos/App_Data/: TextFile.txt
svn/repos/images/: Thumbs.db
trunk/: bash_setup  copy  laue.tar.REMOVED.git-id
trunk/gnom/src/: Makefile.am  Makefile.in
trunk/lib/src/: Makefile.am  Makefile.in  ldm_defaults.finc  ldm_get_imtyp.f  ldm_set_imdat.f  ldm_set_imtyp.f  readpstiff.c  readpstiff.h  readpstiffP.h
trunk/src/: Makefile.am  Makefile.in  intlaue.f  lauegen.f  lauegen_limits.finc  ldm_limits.finc
trunk/testdata/: la2.tif  testb1.ldm  testla2.ldm
(+343 files in other folders)
